Fix scrollview not showing h3 elem properly

--- a/src/css/projects.css
+++ b/src/css/projects.css
@@ -14,7 +14,7 @@
     padding-top:25px;
     font-size: 2vmin;
     position: sticky;
-    top: 0; 
+    top: 100px; 
     /* border-style: none none none solid; */
 }
 
@@ -33,10 +33,7 @@
     color:rgb(20, 20, 20);    
 }
 
-.proj-cell {
-    /* content: "";
-    display: table;
-    clear: both; */
+.proj-cell .body {
     margin-bottom: 5%;
     margin-left: 5%;
     padding-left: 2%;
@@ -45,9 +42,8 @@
     border-left-color:rgb(138, 138, 138);
 
 }
-/* .proj-cell body {
-    float: left;
-} */
+
+
 .img-container {
   display: inline;
 }
@@ -57,6 +53,12 @@
     color:rgb(0, 0, 0);
     margin-bottom: 5px;
     font-weight: normal;
+}
+
+.proj-cell span {
+    margin-top: -100px;
+    padding-bottom: 100px;
+    display: block;
 }
 
 .proj-cell h5 {
